syntax = "proto3";
package helloworld;

import "google/protobuf/timestamp.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
  google.protobuf.Timestamp createdOn = 2;
}

message HelloReply {
  string message = 1;
  google.protobuf.Timestamp createdOn = 2;
}

